fix the dark mode issue

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ select,
 }
 
 body {
-	background: hsl(0, 0%, 52%);
+	background: hsl(0, 0%, 98%);
 	color: hsl(200, 15%, 8%);
 }
 
